# gradcasino

./: .gitignore  README.md  meson.build
include/gradcasino/: double.hpp  engine.hpp  gradcasino.hpp  graph.hpp  node.hpp  result.hpp
src/backend/llvm/: codegen.cpp  jit.cpp
src/engine/: double.cpp  engine.cpp  graph.cpp
tests/: meson.build  test_compile.cpp  test_double.cpp  test_graph.cpp
